Fix unfinished Thesis

--- a/Thesis/bibliography.bib
+++ b/Thesis/bibliography.bib
@@ -545,6 +545,15 @@
   doi       = {10.1109/ICRTIT.2011.5972416}
 }
 
+@misc{hardman_2021,
+  title   = {1E/ didcomm mythconceptions: Understanding the most misunderstood opportunity in SSI},
+  url     = {https://iiw.idcommons.net/1E/_DIDComm_Mythconceptions:_understanding_the_most_misunderstood_opportunity_in_SSI},
+  journal = {Internet Identity Workshop},
+  author  = {Hardman, Daniel},
+  year    = {2021},
+  month   = {Oct}
+} 
+
 % ----------------Evaluation-------------------
 # DNS Security Issues
 
@@ -611,3 +620,12 @@
   title  = {Blade: A Blockchain-supported Architecture for Decentralized Services},
   year   = {2022}
 }
+
+ @misc{wilcox-o'hearn_2001,
+  title   = {Zooko.com},
+  url     = {https://web.archive.org/web/20011020191610/http://zooko.com/distnames.html},
+  journal = {Names: Distributed, Secure, Human-Readable: Choose Two},
+  author  = {Wilcox-O'Hearn, Zooko},
+  year    = {2001},
+  month   = {Oct}
+} 
