--- a/Thesis/content/02_related_work.tex
+++ b/Thesis/content/02_related_work.tex
@@ -89,7 +89,7 @@ There are two workflows of communication for a user in ActivityPub, as shown in 
   \caption{ActivityPub overview \cite{lemmer-webber_tallon_guy_prodromou_2018}}
   \label{fig:ap_flow}
 \end{figure}
-\pagebreak
+
 
 Regarding security, although ActivityPub's specification does not define any official security mechanisms, it mentions a list published by the SocialWG of best security practices\footnote{https://www.w3.org/wiki/SocialCG/ActivityPub/Authentication\_Authorization} that may be used in an ActivityPub implementation. This list suggests using standards such as OAuth 2.0\footnote{https://oauth.net/2/} for client-to-server authentication, as well as HTTP Signatures\footnote{https://tools.ietf.org/html/draft-cavage-http-signatures-08} and Linked Data Signatures\footnote{https://w3c-dvcg.github.io/ld-signatures/} for server-to-server authentication. Furthermore, it recommends using HTTPS for its HTTP-based communication to provide transport-layer encryption.
 
@@ -101,7 +101,7 @@ Regarding security, although ActivityPub's specification does not define any off
 
 It is impossible not to refer to the \emph{Fediverse} when ActivityPub is mentioned. The \emph{Fediverse} is an interoperable collection of different federated social networks running on free open software on thousands of servers across the world that implement the same open-standard protocols to be able to interact with each other. It is developed by a not-profit-driven community of people around the globe independent of any corporation or official institution \cite{holloway_2018} \cite{https://doi.org/10.48550/arxiv.1909.05801}. The simplest way to explain how the federation works is the following example: Bob has a Twitter account, which he uses to follow all his friends that also have a Twitter account. Alice is a friend of Bob, but she only has an account on Youtube. In the real world, these two services are completely isolated and cannot communicate. However, if both had implemented the same social network protocol, such as ActivityPub, Bob would be able to find Alice by a normal search on Twitter and follow her. Allowing any new post of Alice on Youtube, to appear in Bob's Twitter timeline.
 
-Before ActivityPub, the \emph{Fediverse} implemented other protocols like \emph{Ostatus}\footnote{https://www.w3.org/community/ostatus/wiki/images/9/93/OStatus\_1.0\_Draft\_2.pdf}, \emph{Matrix}\footnote{https://matrix.org}, and \emph{Diaspora}\footnote{https://diaspora.github.io/diaspora\_federation}. However, after ActivityPub was published as a Recommendation by the SocialWG in January 2018, many of these federated social networks upgraded to ActivityPub, becoming the predominant protocol rapidly. Furthermore, the range of services that can be found inside the \emph{Fediverse} includes blogging, microblogging, video streaming, photo, music sharing as well as file hosting. Examples are shown in table \ref{table:fediverse_examples}.
+Before ActivityPub, the \emph{Fediverse} implemented other protocols like \emph{Ostatus}\footnote{https://ostatus.github.io/spec/OStatus\%201.0\%20Draft\%202.html}, \emph{Matrix}\footnote{https://matrix.org}, and \emph{Diaspora}\footnote{https://diaspora.github.io/diaspora\_federation}. However, after ActivityPub was published as a Recommendation by the SocialWG in January 2018, many of these federated social networks upgraded to ActivityPub, becoming the predominant protocol rapidly. Furthermore, the range of services that can be found inside the \emph{Fediverse} includes blogging, microblogging, video streaming, photo, music sharing as well as file hosting. Examples are shown in table \ref{table:fediverse_examples}.
 
 \begin{table}[H]
   \centering
@@ -147,7 +147,7 @@ Although it was not the first social network to implement ActivityPub, Mastodon 
 Mastodon's implementation of ActivityPub follows the guidelines defined by the spec. However, as the protocol does not specify how to implement some key processes required for a fully-working social network, Mastodon extended the protocol with the following processes and features.
 
 \subsubsection*{\textbf{Security}}
-Mastodon implemented the authentication and authorization mechanisms from the best practices list of the SocialWG to address the security concerns in ActiviyPub. The ones relevant for this thesis are the HTTP and the JSON-LD signatures. HTTP signatures extend the HTTP protocol by adding the possibility to sign the HTTP requests cryptographically. This signature gets added to the request within the \emph{Signature} header, and it provides not only end-to-end message integrity but also proof of the authenticity of the sender without the need for multiple round-trips \cite{cavage_sporny_2019}. Creating an HTTP signature means signing the parameters of the request itself, i.e the \emph{request-target}, the \emph{host}, and the \emph{date}. These parameters and their values are concatenated in a single string, hashed, and signed with the sender's public key. Finally, the \emph{Signature} header indicates the key used to sign the document, the parameters inside the signature, and the algorithm used to hash it. An example in Mastodon is shown by listing \ref{fig:http_signature}. 
+Mastodon implemented the authentication and authorization mechanisms from the best practices list of the SocialWG to address the security concerns in ActiviyPub. The ones relevant to this thesis are the HTTP and the JSON-LD signatures. HTTP signatures extend the HTTP protocol by adding the possibility to sign the HTTP requests cryptographically. This signature gets added to the request within the \emph{Signature} header, and it provides not only end-to-end message integrity but also proof of the authenticity of the sender without the need for multiple round-trips \cite{cavage_sporny_2019}. Creating an HTTP signature means signing the parameters of the request itself, i.e the \emph{request-target}, the \emph{host}, and the \emph{date}. These parameters and their values are concatenated in a single string, hashed, and signed with the sender's public key. Finally, the \emph{Signature} header indicates the key used to sign the document, the parameters inside the signature, and the algorithm used to hash it. An example in Mastodon is shown by listing \ref{fig:http_signature}. 
 Following the same idea, Linked Data Signatures offer a way to create and attach signatures to JSON-LD documents. This kind of signature can provide non-repudiation to a JSON-LD object, like an ActivityStreams Activity object, even if the object has been shared, forwarded, or referenced at a future time \cite{celik_prodromou_le_hors_2014}. However, this feature, although implemented, is not actively used in Mastodon. For Mastodon to be able to implement these signatures, it was necessary to generate keypairs for the users. For this reason, Mastodon added a new property \emph{publicKey} to the actor object, which includes the pem-formatted public key of an RSA-2018 keypair. See appendix \ref{fig:mastodon_actor_object} for the complete actor object that includes the added properties in the Mastodon implementation.
 
 \lstset{style=JSONStyle}
@@ -167,7 +167,6 @@ As explained in \ref{subsec:ap_workflows}, ActivityPub requires a resolving proc
 \subsubsection*{Web Host Metadata}
 This endpoint allows the discovery of host information using a lightweight metadata document format. In this context, \emph{host} refers to the entity in charge of a collection of resources defined by URIs with a common URI host \cite{cook_2011}. It employs the XRD 1.0\footnote{https://docs.oasis-open.org/xri/xrd/v1.0/os/xrd-1.0-os.html} document format, which offers a basic and flexible XML-based schema for resource description. Moreover, it provides two mechanisms for providing resource-specific information, \emph{link templates} and \emph{Link-based Resource Descriptor Documents} (LRDD). On the one hand, link templates require a URI to work, thus avoiding the use of fixed URIs. On the other hand, the LRDD relation type is used to relate \emph{LRDD documents} to resources or host-meta documents \cite{cook_2011}. In the specific case of the Mastodon implementation, requesting the host-meta endpoint will give us back the \emph{lrdd} link to the Webfinger endpoint, where specific resource information can be found. This is illustrated by figures \ref{fig:host_metadata_response} and \ref{fig:host_metadata_request}.
 
-    \pagebreak
 \lstset{style=JSONStyle}
 \begin{lstlisting}[language=PHP, caption=Web Host Metadata request to mastodon.social, label=fig:host_metadata_request, float=ht]
     GET /.well-known/host-meta HTTP/1.1
@@ -385,7 +384,7 @@ Based on DIDComm v1, the DIF's Communication Working Group (CWG) has implemented
 
 From this point on, the term \emph{DIDComm} will refer exclusively to DIDComm Messaging v2. DIDComm can be described as a communication protocol that promises a secure and private methodology that builds on top of the decentralized design of DIDs. It is a versatile protocol that supports a wide range of features, such as security, privacy, decentralization, extensibility, interoperability, and the ability to be transport-agnostic \cite{curren_looker_terbu_2020}.
 
-DIDComm differs from the current dominant web paradigm, where something as simple as an API call requires an almost immediate response through the same channel from the receiving end. However, this duplex request-response interaction is not always possible for several reasons. For example, some agents may not have a constant network connection; others may interact only in larger time frames, and some may even not listen over the same channel where the original message came from. DIDComm's paradigm is asynchronous and one-directional, thus showing a considerable resemblance with the email paradigm. \
+DIDComm differs from the current dominant web paradigm, where something as simple as an API call requires an almost immediate response through the same channel from the receiving end. However, this duplex request-response interaction is not always possible for several reasons. For example, some agents may not have a constant network connection; others may interact only in larger time frames, and some may even not listen over the same channel where the original message came from. DIDComm's paradigm is asynchronous and one-directional, thus showing a considerable resemblance to the email paradigm. \
 
 Furthermore, the web paradigm assumes the use of traditional processes like authentication, session management, and end-to-end encryption. DIDComm does not require certificates from external parties to establish trust, nor does it require constant connections for end-to-end transport level encryption like TLS. This takes the security and privacy responsibility away from institutions and places it within the agents. All of this without limiting the communication possibilities due to its ability to function as a base layer, upon which capabilities like sessions and synchronous interactions can be built \cite{curren_looker_terbu_2020}.\\ 
 To better understand how it works, let's look at how it would work in a scenario where Alice wants to send a private message to Bob: 
@@ -429,7 +428,7 @@ Furthermore, DIDComm specifies using other proposed standards that were not part
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.7\textwidth]{related_work/didcomm_tools.png}
-  \caption{Standards used in DIDComm}
+  \caption{Standards used in DIDComm \cite{hardman_2021}}
   \label{fig:didcomm_tools}
 \end{figure}
 
