--- a/Thesis/content/99_appendices/a02_env_file.tex
+++ b/Thesis/content/99_appendices/a02_env_file.tex
@@ -1,11 +1,8 @@
-\appendix{Installation Guide}
+\chapter{Appendix: Env File}
 \label{appendix:env_file}
 
-
-\section{Env File}
 \begin{verbatim}
 # Federation
-# ----------
  This identifies your server and cannot be changed safely later
 # ----------
 LOCAL_DOMAIN= 
@@ -27,7 +24,6 @@ DB_USER=mastodon
 DB_NAME=mastodon_dev
 DB_PASS=
 DB_PORT=5432
-
 
 # Sending mail
 # ------------
