--- a/Thesis/content/99_appendices/a03_installation_guide.tex
+++ b/Thesis/content/99_appendices/a03_installation_guide.tex
@@ -1,7 +1,6 @@
-\chapter{Appendix: Installation Guide}
-\label{appendix:installation_guide}
+\chapter{Appendix: Nginx Configuration}
+\label{appendix:nginx_configuration}
 
-\section{NGINX Configuration}\label{appendix:nginx_configuration}
 \lstset{style=CodeStyle}
   \begin{lstlisting}[language=PHP, caption=Adding Nginx configuration file., float=h]
     // First, clone the project
@@ -37,50 +36,4 @@
     
 \end{lstlisting}
 
-
-\section{Environment File}\label{appendix:env_file}
-
-\begin{lstlisting}[language=PHP, caption=Environment file template, float=h]
-# Federation
-# ----------
- This identifies your server and cannot be changed safely later
-# ----------
-LOCAL_DOMAIN= 
-
-# DEV ENV
-# ---------
-RAILS_ENV=development
-NODE_ENV=development
-
-# Redis
-# -----
-REDIS_HOST=redis
-REDIS_PORT=6379
-
-# PostgreSQL
-# ----------
-DB_HOST=db
-DB_USER=mastodon
-DB_NAME=mastodon_dev
-DB_PASS=
-DB_PORT=5432
-
-
-# Sending mail
-# ------------
-SMTP_SERVER=
-SMTP_PORT=
-SMTP_LOGIN=
-SMTP_PASSWORD=
-SMTP_FROM_ADDRESS=
-SMTP_REPLY_TO=
-
-# File storage (optional)
-# -----------------------
-S3_ENABLED=true
-S3_BUCKET=
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-
-\end{lstlisting}
 
