--- a/Thesis/content/00_frontpages/03_abstract.tex
+++ b/Thesis/content/00_frontpages/03_abstract.tex
@@ -1,8 +1,10 @@
 \chapter*{Abstract}
 \label{cha:abstract}
 
-This thesis presents a design to integrate Decentralized Identifiers (DIDs) and enable DIDComm Messaging v2 into an ActivityPub-based Online Social Network (OSN). 
+The centralized architecture that characterizes the current social Web led to the development of Decentralized Online Social Networks (DOSN). These DOSN rely on their communication protocols to interact with each other, allowing the creation of a boundaryless ecosystem where users can move seamlessly between applications without rebuilding their network of friends and profiles at each destination.
 
-ActivityPub is a decentralized social network protocol that lacks security mechanisms and relies on HTTP as its communication protocol.  
-DIDs are a type of globally-unique, verifiable identifier officially standardized by the World Wide Web Consortium (W3C) in July 2022. DIDs build the foundation of Self-Sovereign Identity and give entities greater control over their online information and interactions while providing security and privacy. DIDComm Messaging v2 builds on top of DIDs, implementing various IETF standards and drafts to provide a secure, private, and decentralized communication methodology. 
-Mastodon was chosen as the representative ActivityPub implementation
+ActivityPub is a standardized decentralized social networking protocol implemented by a large number of DOSNs. However, this standard has failed to define a way for its communication to be secure, confidential, private, and non-repudiable. Furthermore, its implementations fall short of a decentralized way to manage identities.
+
+Web 3.0 brings decentralization to the current mostly siloed Web architecture, and it does it through new technologies that enable new standards that have the potential to change the way the Web is used. The recently standardized Decentralized Identifiers (DIDs) from the W3C and the DID-based communication protocol DIDComm Messaging v2 are two specifications that promise to decentralize how identities are handled, and how communication security is accomplished.  
+
+This work proposes to address the limitations of ActivityPub-based social networks by integrating DIDs to allow decentralized identity management, and by enabling DIDComm to provide a decentralized way for secure communication.
