--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -110,6 +110,7 @@ TCP
 \begin{appendices}
 	\input{content/99_appendices/a01_listings}
 	\input{content/99_appendices/a03_installation_guide}
+	\input{content/99_appendices/a02_env_file}
 \end{appendices}
 
 \end{document}
